--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://UlianaOr.github.io/ToodoList",
   "dependencies": {
     "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
